[package]
name = "item-spawning"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
switch-server = { git = "https://github.com/blu-dev/switch-server" }
lua_bind_hash = { git = "https://github.com/ultimate-research/lua-bind-hash" }